[gd_scene load_steps=20 format=2]

[ext_resource path="res://Assets/Interface/Hud/Styles/ToolsBarTheme.tres" type="Theme" id=1]
[ext_resource path="res://Assets/Interface/Textures/MaterialDesign/T_IconVideoCamera.png" type="Texture" id=2]
[ext_resource path="res://Assets/Interface/Textures/MaterialDesign/T_IconLibrary.png" type="Texture" id=3]
[ext_resource path="res://Assets/Interface/Fonts/HUD_Roboto_Small.tres" type="DynamicFont" id=4]
[ext_resource path="res://Assets/Interface/Textures/MaterialDesign/T_IconAI.png" type="Texture" id=5]
[ext_resource path="res://Assets/Interface/Textures/MaterialDesign/T_IconBuilding_Alt.png" type="Texture" id=6]
[ext_resource path="res://Assets/Interface/Textures/MaterialDesign/T_IconShareBig.png" type="Texture" id=7]
[ext_resource path="res://Assets/Interface/Textures/MaterialDesign/T_IconMap_Small.png" type="Texture" id=8]
[ext_resource path="res://Assets/Interface/Textures/MaterialDesign/T_IconCamera.png" type="Texture" id=9]
[ext_resource path="res://Assets/Interface/Textures/MaterialDesign/T_IconEvent.png" type="Texture" id=10]
[ext_resource path="res://Assets/Interface/Textures/MaterialDesign/T_IconExpand.png" type="Texture" id=11]
[ext_resource path="res://SceneComponent/Interface/Hud/Apps/ToolsBar/Button_Map.gd" type="Script" id=12]
[ext_resource path="res://SceneComponent/Interface/Hud/Apps/ToolsBar/Button_Expand.gd" type="Script" id=13]
[ext_resource path="res://SceneComponent/Interface/Hud/Apps/ToolsBar/ToolsBarRoot.gd" type="Script" id=14]
[ext_resource path="res://Assets/Interface/Textures/MaterialDesign/Tools/T_IconQuestion.png" type="Texture" id=15]
[ext_resource path="res://Assets/Interface/Textures/HudPanelMenu.png" type="Texture" id=16]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 4 )

[sub_resource type="Animation" id=2]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/HBoxContainer_Dynamic:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VBoxContainer/HBoxContainer_Dynamic:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("VBoxContainer/HBoxContainer_Static/VBoxContainer9/MarginContainer/TextureRect:rect_rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0 ]
}

[sub_resource type="Animation" id=3]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/HBoxContainer_Static/VBoxContainer9/MarginContainer/TextureRect:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -180.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VBoxContainer/HBoxContainer_Dynamic:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("VBoxContainer/HBoxContainer_Dynamic:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="ToolsBar" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 0.994
theme = ExtResource( 1 )
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.7
anchor_top = 0.8
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 14
alignment = 2

[node name="HBoxContainer_Static" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 92.0
margin_right = 576.0
margin_bottom = 128.0
theme = SubResource( 1 )
custom_constants/separation = 8
alignment = 2

[node name="Help" type="Panel" parent="VBoxContainer/HBoxContainer_Static"]
margin_left = 320.0
margin_right = 356.0
margin_bottom = 36.0
rect_min_size = Vector2( 36, 36 )
mouse_filter = 1

[node name="Help" type="Button" parent="VBoxContainer/HBoxContainer_Static/Help"]
anchor_right = 1.0
anchor_bottom = 1.0
action_mode = 0
icon = ExtResource( 15 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer7" type="VBoxContainer" parent="VBoxContainer/HBoxContainer_Static"]
margin_left = 364.0
margin_right = 400.0
margin_bottom = 36.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer_Static/VBoxContainer7"]
margin_right = 36.0
margin_bottom = 36.0

[node name="Panel" type="Panel" parent="VBoxContainer/HBoxContainer_Static/VBoxContainer7/MarginContainer"]
margin_right = 36.0
margin_bottom = 36.0
mouse_filter = 1

[node name="Button_Map" type="Button" parent="VBoxContainer/HBoxContainer_Static/VBoxContainer7/MarginContainer"]
margin_right = 36.0
margin_bottom = 36.0
action_mode = 0
icon = ExtResource( 8 )
script = ExtResource( 12 )

[node name="VBoxContainer6" type="VBoxContainer" parent="VBoxContainer/HBoxContainer_Static"]
margin_left = 408.0
margin_right = 444.0
margin_bottom = 36.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer_Static/VBoxContainer6"]
margin_right = 36.0
margin_bottom = 36.0

[node name="Panel" type="Panel" parent="VBoxContainer/HBoxContainer_Static/VBoxContainer6/MarginContainer"]
margin_right = 36.0
margin_bottom = 36.0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer_Static/VBoxContainer6/MarginContainer"]
margin_right = 36.0
margin_bottom = 36.0
texture = ExtResource( 9 )
stretch_mode = 5

[node name="Button_Camera" type="Button" parent="VBoxContainer/HBoxContainer_Static/VBoxContainer6/MarginContainer"]
margin_right = 36.0
margin_bottom = 36.0
flat = true

[node name="VBoxContainer8" type="VBoxContainer" parent="VBoxContainer/HBoxContainer_Static"]
margin_left = 452.0
margin_right = 488.0
margin_bottom = 36.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer_Static/VBoxContainer8"]
margin_right = 36.0
margin_bottom = 36.0

[node name="Panel" type="Panel" parent="VBoxContainer/HBoxContainer_Static/VBoxContainer8/MarginContainer"]
margin_right = 36.0
margin_bottom = 36.0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer_Static/VBoxContainer8/MarginContainer"]
margin_right = 36.0
margin_bottom = 36.0
texture = ExtResource( 2 )
stretch_mode = 5

[node name="Button_Video" type="Button" parent="VBoxContainer/HBoxContainer_Static/VBoxContainer8/MarginContainer"]
margin_right = 36.0
margin_bottom = 36.0
flat = true

[node name="MenuPanel" type="Panel" parent="VBoxContainer/HBoxContainer_Static"]
margin_left = 496.0
margin_right = 532.0
margin_bottom = 36.0
rect_min_size = Vector2( 36, 36 )
mouse_filter = 1

[node name="PanelPopup" type="Button" parent="VBoxContainer/HBoxContainer_Static/MenuPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
action_mode = 0
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer_Static/MenuPanel/PanelPopup"]
anchor_left = 0.15
anchor_top = 0.15
anchor_right = 0.85
anchor_bottom = 0.85
texture = ExtResource( 16 )
expand = true
stretch_mode = 6

[node name="VBoxContainer9" type="VBoxContainer" parent="VBoxContainer/HBoxContainer_Static"]
margin_left = 540.0
margin_right = 576.0
margin_bottom = 36.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer_Static/VBoxContainer9"]
margin_right = 36.0
margin_bottom = 36.0

[node name="Panel" type="Panel" parent="VBoxContainer/HBoxContainer_Static/VBoxContainer9/MarginContainer"]
margin_right = 36.0
margin_bottom = 36.0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer_Static/VBoxContainer9/MarginContainer"]
margin_right = 36.0
margin_bottom = 36.0
texture = ExtResource( 11 )
stretch_mode = 5

[node name="Button_Expand" type="Button" parent="VBoxContainer/HBoxContainer_Static/VBoxContainer9/MarginContainer"]
margin_right = 36.0
margin_bottom = 36.0
flat = true
script = ExtResource( 13 )

[node name="HBoxContainer_Dynamic" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 142.0
margin_right = 576.0
margin_bottom = 214.0
custom_constants/separation = 10
alignment = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer_Dynamic"]
margin_left = 176.0
margin_right = 248.0
margin_bottom = 72.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer_Dynamic/VBoxContainer2"]
margin_right = 72.0
margin_bottom = 72.0

[node name="Panel" type="Panel" parent="VBoxContainer/HBoxContainer_Dynamic/VBoxContainer2/MarginContainer"]
margin_right = 72.0
margin_bottom = 72.0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer_Dynamic/VBoxContainer2/MarginContainer"]
margin_right = 72.0
margin_bottom = 72.0
texture = ExtResource( 6 )
stretch_mode = 5

[node name="Button_Build" type="Button" parent="VBoxContainer/HBoxContainer_Dynamic/VBoxContainer2/MarginContainer"]
margin_right = 72.0
margin_bottom = 72.0

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxContainer/HBoxContainer_Dynamic"]
margin_left = 258.0
margin_right = 330.0
margin_bottom = 72.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer_Dynamic/VBoxContainer3"]
margin_right = 72.0
margin_bottom = 72.0

[node name="Panel" type="Panel" parent="VBoxContainer/HBoxContainer_Dynamic/VBoxContainer3/MarginContainer"]
margin_right = 72.0
margin_bottom = 72.0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer_Dynamic/VBoxContainer3/MarginContainer"]
margin_right = 72.0
margin_bottom = 72.0
texture = ExtResource( 3 )
stretch_mode = 5

[node name="Button_Library" type="Button" parent="VBoxContainer/HBoxContainer_Dynamic/VBoxContainer3/MarginContainer"]
margin_right = 72.0
margin_bottom = 72.0
flat = true

[node name="VBoxContainer4" type="VBoxContainer" parent="VBoxContainer/HBoxContainer_Dynamic"]
margin_left = 340.0
margin_right = 412.0
margin_bottom = 72.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer_Dynamic/VBoxContainer4"]
margin_right = 72.0
margin_bottom = 72.0

[node name="Panel" type="Panel" parent="VBoxContainer/HBoxContainer_Dynamic/VBoxContainer4/MarginContainer"]
margin_right = 72.0
margin_bottom = 72.0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer_Dynamic/VBoxContainer4/MarginContainer"]
margin_right = 72.0
margin_bottom = 72.0
texture = ExtResource( 10 )
stretch_mode = 5

[node name="Button_Events" type="Button" parent="VBoxContainer/HBoxContainer_Dynamic/VBoxContainer4/MarginContainer"]
margin_right = 72.0
margin_bottom = 72.0
flat = true

[node name="VBoxContainer5" type="VBoxContainer" parent="VBoxContainer/HBoxContainer_Dynamic"]
margin_left = 422.0
margin_right = 494.0
margin_bottom = 72.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer_Dynamic/VBoxContainer5"]
margin_right = 72.0
margin_bottom = 72.0

[node name="Panel" type="Panel" parent="VBoxContainer/HBoxContainer_Dynamic/VBoxContainer5/MarginContainer"]
margin_right = 72.0
margin_bottom = 72.0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer_Dynamic/VBoxContainer5/MarginContainer"]
margin_right = 72.0
margin_bottom = 72.0
texture = ExtResource( 5 )
stretch_mode = 5

[node name="Button_NPC" type="Button" parent="VBoxContainer/HBoxContainer_Dynamic/VBoxContainer5/MarginContainer"]
margin_right = 72.0
margin_bottom = 72.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer_Dynamic"]
margin_left = 504.0
margin_right = 576.0
margin_bottom = 72.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer_Dynamic/VBoxContainer"]
margin_right = 72.0
margin_bottom = 72.0

[node name="Panel" type="Panel" parent="VBoxContainer/HBoxContainer_Dynamic/VBoxContainer/MarginContainer"]
margin_right = 72.0
margin_bottom = 72.0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer_Dynamic/VBoxContainer/MarginContainer"]
margin_right = 72.0
margin_bottom = 72.0
texture = ExtResource( 7 )
stretch_mode = 5

[node name="Button_Share" type="Button" parent="VBoxContainer/HBoxContainer_Dynamic/VBoxContainer/MarginContainer"]
margin_right = 72.0
margin_bottom = 72.0
flat = true

[node name="Anim" type="AnimationPlayer" parent="."]
anims/hide = SubResource( 2 )
anims/show = SubResource( 3 )
